# docuAgent

./: LICENSE  README.md
client/: package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: chat-panel.tsx  document-panel.tsx  footer.tsx  header.tsx  how-to-use-dialog.tsx  system-monitor.tsx  theme-toggle.tsx
client/src/components/chat-panel/: chat-composer.tsx  chat-header.tsx  empty-chat-state.tsx  index.tsx  message-item.tsx
client/src/components/document-panel/: create-folder-dialog.tsx  document-row.tsx  folder-row.tsx  index.tsx  items-list.tsx  panel-footer.tsx  panel-header.tsx  panel-shell.tsx  rename-dialogs.tsx  search-bar.tsx  upload-menu.tsx
client/src/components/ui/: button.tsx  card.tsx  (+5 more)
client/src/hooks/: use-agentic-chat.ts  use-document-panel.ts
client/src/lib/: api.ts  types.ts  utils.ts
server/: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml  reset_db.py
server/alembic/: env.py
server/alembic/versions/: 0001_create_documents_table.py  0002_add_folders.py  0003_add_chat_tables.py  087027ed40bd_allow_duplicate_sha256.py  b05bfd4de95e_add_starred_and_reactions.py  cece4bb80715_add_chat_branching.py
server/app/: main.py  settings.py
server/app/api/: routes.py  schemas.py
server/app/domain/: errors.py
server/app/services/: chunking.py  db.py  embeddings.py  jobs_client.py  models.py  repositories.py  scanner.py  storage.py  vector_store.py  vision.py
server/app/workflows/: agent_query.py  inngest_app.py  inngest_pdf.py
server/streamlit_ui/: app.py
